--- a/Biography.html
+++ b/Biography.html
@@ -42,24 +42,35 @@
 					<article id="main">
 						<header>
 							<h2>BIOGRAPHY</h2>
-							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
+							<p>&nbsp;</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<h3>Lorem ipsum dolor</h3>
-								<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+								<h3>Early Years and education&nbsp;</h3>
+							  <p>Jack Capstaff is a conductor of, and composer for, a wide variety of musical genres and ensembles, currently holding residencies with Rotherham Symphony Orchestra, Derwent Brass, a Derbyshire Brass Band, and Harlequin Brass, a symphonic brass ensemble. Having conducted since age fifteen, cutting his teeth with a local brass band, and being appointed the music director of a number of pantomimes and shows, Jack went on to study conducting and composition at the Royal Welsh college of music and drama.</p>
 
-								<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
+								<p>Jack studied under Peter Reynolds, John Hardy, Dr Robert Spearing, and Michael McCartney for composition alongside Dr John Traill, Anthony Negus and consultations with David Jones for conducting in the contemporary music department.</p>
+								<p>Since early 2022 Jack has begun studying and consulting with some of the country’s top musical minds, studying conducting with Mark Heron, with consultations in interpretation, conducting, and composition with Frank Renton, Ray Farr, and Philip Wilby.&nbsp;</p>
+<hr />
 
-								<hr />
-
-								<h4>Feugiat aliquam</h4>
-								<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
-
-								<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
-
-							</div>
+								<h4>Composer</h4>
+								<p>As a composer, Jack has been commissioned by some excellent and varied ensembles, such as Black Diamonds, which was commissioned for an anniversary concert by Carlton Main Frickley Colliery Band, and Fahla, commissioned by Sinfonia Newydd in collaboration with Artes Mundi and premiered in the National Museum of Wales. Other commissioned works include pieces from Solo to Symphony Orchestra. Jack’s specialism, and passion, lies in the creation and performance of contemporary music but firmly believes in the use of skills transferable from this endeavour to that of more classical repertoire and beyond, having worked on Mozart, to Messiaen, and lots in between.</p>
+								
+							  <h4>Conductor</h4>
+							  <p>Whilst at university, Jack took his first step into Brass Band conducting at a more senior level, taking on the Foresters Brass 2000 band. Within the first year, Jack and the band gained entry to the prestigious Spring Festival with an “alternative” entertainments program, much of which was arranged by Jack himself. Whilst in Cardiff, Jack also led the City of Cardiff M2 band. In 2018 Jack came 2nd in the national association of Brass Band conductors conducting competition, an achievement he matched in 2022, alongside taking the ‘highest UK participant’ award. Since 2018 Jack has been working with Derwent Brass, alongside his residency with Harlequin Brass, a symphony brass ensemble.&nbsp;</p>
+							  <p>His time with Derwent has over the years, and continues to, prove to be an extremely creative and fruitful collaboration having pushed the boundaries of traditional brass band performance. Such performances include featuring violin and vocal soloists, augmented brass band to include big band rhythm and saxophone sections and joining with rock ensembles. As well as regularly performing sold out events, Jack’s key focus is to engage communities by performing innovative feature length new compositions with animation and narration, written by both Jack and collaborators, and often animated by his wife, Charlotte. In 2021, Derwent Brass were awarded ‘most entertaining band’ at both Bolsover and Wychavon entertainments contests for performances of Jack’s Musica De Los Muertos, which has since been provided free of charge to any band who wants a copy.</p>
+								<p>2023 saw Jack take on the role of music director with the Rotherham Symphony Orchestra, with whom he has already produced engaging and successful programmes including Britten, Copland, Brahms, Mendelssohn, and Mussorgsky. In 2024, Jack added Derby Concert Orchestra to his portfolio, with whom he enjoys a fantastic realtionship as principal conductor; conducting&nbsp;some of the finest masterworks, and new an inventive orchestral projects and performances.&nbsp;&nbsp;</p>
+<h4>Communicator</h4>
+								<p>Jack continues to work with the Association of Brass Band Adjudicators, with whom he has travelled country wide for regional, national, and entertainments contests while developing his adjudicating portfolio, as he hopes to help give input and advice to music creators further afield. </p>
+								<p>He also sits on the executive committee of the Brass Band Conductor's Association as specialproject officer. In April 2025 he has sucessfully launched a pioneering conducting workshop, inviting candidates in all stages of their musical journeys to work with high level musicians.&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</p>
+							  <p>His time with Derwent has over the years, and continues to, prove to be an extremely creative and fruitful collaboration having pushed the boundaries of traditional brass band performance. Such performances include featuring violin and vocal soloists, augmented brass band to include big band rhythm and saxophone sections and joining with rock ensembles. As well as regularly performing sold out events, Jack’s key focus is to engage communities by performing innovative feature length new compositions with animation and narration, written by both Jack and collaborators, and often animated by his wife, Charlotte. In 2021, Derwent Brass were awarded ‘most entertaining band’ at both Bolsover and Wychavon entertainments contests for performances of Jack’s Musica De Los Muertos, which has since been provided free of charge to any band who wants a copy.</p>
+								
+							  <h4>PROJECTS</h4>
+							  <p>Jack truly believes in the innovation of western classical music. It is this passion for driving new and exciting mediums, formats, and music which he believes will help to expand and diversify the audience for music, increasing the lives that may be able to benefit from the social good of music; especially for those who may have traditionally had limited access or exposure to it.</p>
+							  <p>Jack can often be found composing and arranging new music, multimedia presentations and exciting new projects for band and orchestra to help appeal to new audiences.&nbsp; &nbsp;</p>
+								<p>In 2022 Jack has returned to the Carlton Main Frickley Colliery band to put together a recording of The Snow Queen, an adaption of Hans Christian Anderson’s tale of the same title, with narration by Frank Renton and animation by his wife Charlotte. The work was released digitally in 2022 with proceeds going to charity, before being performed at the Glasshouse (formerly Sage) in 2024.&nbsp;</p>
+        </div>
 						</section>
 					</article>
 
