Contact and Schedule Updates

--- a/Biography.html
+++ b/Biography.html
@@ -27,10 +27,11 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
+											<li><a href="Biography.html">Biography</a></li>
 											<li><a href="media.html">Media</a></li>
 											<li><a href="Schedule.html">Schedule</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="Contact.html">Contact</a></li>
+											
 										</ul>
 									</div>
 								</li>
@@ -47,7 +48,7 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<h3>Early Years and education&nbsp;</h3>
+								<h4>Early Years and Education</h4>
 							  <p>Jack Capstaff is a conductor of, and composer for, a wide variety of musical genres and ensembles, currently holding residencies with Rotherham Symphony Orchestra, Derwent Brass, a Derbyshire Brass Band, and Harlequin Brass, a symphonic brass ensemble. Having conducted since age fifteen, cutting his teeth with a local brass band, and being appointed the music director of a number of pantomimes and shows, Jack went on to study conducting and composition at the Royal Welsh college of music and drama.</p>
 
 								<p>Jack studied under Peter Reynolds, John Hardy, Dr Robert Spearing, and Michael McCartney for composition alongside Dr John Traill, Anthony Negus and consultations with David Jones for conducting in the contemporary music department.</p>
@@ -55,7 +56,7 @@
 <hr />
 
 								<h4>Composer</h4>
-								<p>As a composer, Jack has been commissioned by some excellent and varied ensembles, such as Black Diamonds, which was commissioned for an anniversary concert by Carlton Main Frickley Colliery Band, and Fahla, commissioned by Sinfonia Newydd in collaboration with Artes Mundi and premiered in the National Museum of Wales. Other commissioned works include pieces from Solo to Symphony Orchestra. Jack’s specialism, and passion, lies in the creation and performance of contemporary music but firmly believes in the use of skills transferable from this endeavour to that of more classical repertoire and beyond, having worked on Mozart, to Messiaen, and lots in between.</p>
+								<p>As a composer, Jack has been commissioned by some excellent and varied ensembles, such as Black Diamonds, which was commissioned for an anniversary concert by Carlton Main Frickley Colliery Band, and Fahla, commissioned by Sinfonia Newydd in collaboration with Artes Mundi and premiered in the National Museum of Wales. Other commissioned works include pieces from Solo to Symphony Orchestra. Jack’s specialism, and passion, lies in the creation and performance of contemporary music but firmly believes in the use of skills transferable from this endeavour to that of more classical repertoire and beyond, having worked on Mozart, to Messiaen, and lots in between.&nbsp;</p>
 								
 							  <h4>Conductor</h4>
 							  <p>Whilst at university, Jack took his first step into Brass Band conducting at a more senior level, taking on the Foresters Brass 2000 band. Within the first year, Jack and the band gained entry to the prestigious Spring Festival with an “alternative” entertainments program, much of which was arranged by Jack himself. Whilst in Cardiff, Jack also led the City of Cardiff M2 band. In 2018 Jack came 2nd in the national association of Brass Band conductors conducting competition, an achievement he matched in 2022, alongside taking the ‘highest UK participant’ award. Since 2018 Jack has been working with Derwent Brass, alongside his residency with Harlequin Brass, a symphony brass ensemble.&nbsp;</p>
