--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ Webdesign by Jack Capstaff
 											<li><a href="Biography.html">Biography</a></li>
 											<li><a href="Schedule.html">Schedule</a></li>
 											<li><a href="Media.html">Media</a></li>
+											<li><a href="Contact.html">Contact</a></li>
 										</ul>
 									</div>
 								</li>
@@ -71,7 +72,7 @@ Webdesign by Jack Capstaff
 							<div class="image"><img src="images/Communicator.PNG" alt="" /></div><div class="content">
 								<h2>communicator</h2>
 							  <p>As a public speaker, and advocate for the arts; Jack has worked with organisations such as Brass Bands England, the Brass Band Conductor's Association, and given talks and presentations both at festivals, conferences, and the Royal Philharmonic Society Awards.&nbsp;</p>
-								<p>Read his full story here&nbsp;</p>
+								<p>Read his full story <a href="Biography.html">here</a>&nbsp;</p>
                             </div>
 						</section>
 					</section>
