--- a/jackcapstaff.com/index.html
+++ b/jackcapstaff.com/index.html
@@ -60,10 +60,10 @@ Webdesign by Jack Capstaff
 							<section class="spotlight">
 								<div class="image">
 									<img 
-										src="images/conducting-small.jpg" 
-										srcset="images/conducting-small.jpg 500w, 
-												images/conducting-medium.jpg 1000w, 
-												images/conducting-large.jpg 2000w" 
+										src="images/Conducting-small.jpg" 
+										srcset="images/Conducting-small.jpg 500w, 
+												images/Conducting-medium.jpg 1000w, 
+												images/Conducting-large.jpg 2000w" 
 										sizes="(max-width: 500px) 100vw, 
 											   (max-width: 1000px) 50vw, 
 											   33vw"
