--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ Webdesign by Jack Capstaff
 											<li><a href="Biography.html">Biography</a></li>
 											<li><a href="Schedule.html">Schedule</a></li>
 											<li><a href="Media.html">Media</a></li>
+											<li><a href="News.html">News</a></li>
 											<li><a href="Contact.html">Contact</a></li>
 										</ul>
 									</div>
