--- a/Media.html
+++ b/Media.html
@@ -29,6 +29,9 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="Biography.html">Biography</a></li>
 											<li><a href="Schedule.html">Schedule</a></li>
+											<li><a href="Media.html">Media</a></li>
+											<li><a href="News.html">News</a></li>
+											<li><a href="Contact.html">Contact</a></li>
 											
 										</ul>
 									</div>
