--- a/News.html
+++ b/News.html
@@ -22,9 +22,11 @@
                         <div id="menu">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="media.html">Media</a></li>
-                                <li><a href="Schedule.html">Schedule</a></li>
-                                <li><a href="Contact.html">Contact</a></li>
+								<li><a href="Biography.html">Biography</a></li>
+								<li><a href="Schedule.html">Schedule</a></li>
+								<li><a href="Media.html">Media</a></li>
+								<li><a href="News.html">News</a></li>
+								<li><a href="Contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </li>
