--- a/Schedule.html
+++ b/Schedule.html
@@ -27,8 +27,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="media.html">Media</a></li>
+											<li><a href="Biography.html">Biography</a></li>
 											<li><a href="Schedule.html">Schedule</a></li>
+											<li><a href="Media.html">Media</a></li>
+											<li><a href="News.html">News</a></li>
 											<li><a href="Contact.html">Contact</a></li>
 										</ul>
 									</div>
